WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173865
ProcessLauncherMac could leak a xpc connection when the process had failed to launch
https://bugs.webkit.org/show_bug.cgi?id=173865
Summary
ProcessLauncherMac could leak a xpc connection when the process had failed to...
Ryosuke Niwa
Reported
2017-06-26 22:33:03 PDT
ProcessLauncherMac could leak a xpc connection when the process had failed to launch
Attachments
Fixes the bug
(1.46 KB, patch)
2017-06-26 22:34 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-06-26 22:34:12 PDT
Created
attachment 313898
[details]
Fixes the bug
Antti Koivisto
Comment 2
2017-06-27 07:28:22 PDT
Comment on
attachment 313898
[details]
Fixes the bug Hope it helps!
WebKit Commit Bot
Comment 3
2017-06-27 14:23:25 PDT
Comment on
attachment 313898
[details]
Fixes the bug Clearing flags on attachment: 313898 Committed
r218842
: <
http://trac.webkit.org/changeset/218842
>
WebKit Commit Bot
Comment 4
2017-06-27 14:23:27 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 5
2017-06-27 14:25:10 PDT
<
rdar://problem/30548155
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug