ProcessLauncherMac could leak a xpc connection when the process had failed to launch https://bugs.webkit.org/show_bug.cgi?id=173865

Reviewed by Antti Koivisto.

Explicitly cancel the XPC connection even When the process launch had failed to avoid a leak.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::ProcessLauncher::launchProcess):


Canonical link: https://commits.webkit.org/190719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218842 268f45cc-cd09-0410-ab3c-d52691b4dbfc