Source/WebKit2/UIProcess/Launcher/mac/ProcessLauncherMac.mm
@@ -201,6 +201,7 @@ void ProcessLauncher::launchProcess()
         // And the receive right.
         mach_port_mod_refs(mach_task_self(), listeningPort, MACH_PORT_RIGHT_RECEIVE, -1);
 
+        xpc_connection_cancel(processLauncher->m_xpcConnection.get());
         processLauncher->m_xpcConnection = nullptr;
 
         processLauncher->didFinishLaunchingProcess(0, IPC::Connection::Identifier());
